<resources>
    <string name="app_name">GitHub User</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="searchFieldHint">Enter a username</string>
    <string name="search_hint">Enter a username</string>
    <string name="char_name">uname</string>
    <string name="name">User Name</string>
    <string name="repository">Repository</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="share_button">Share Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="viewpager">viewpager</string>
    <string name="Followers">Followers</string>
    <string name="Following">Following</string>
    <string name="share">shareBtn</string>
    <string name="searchbtn">search</string>
    <string name="settingbtn">setting</string>
    <string name="textsetting">Github User App\nversion 1.0</string>
    <string name="btnfavorite">favoritebtn</string>
    <string name="deletebtn">deletebtn</string>
    <string name="swipe_order">Swipe left or right to remove specific user</string>
</resources>